--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div class="info">
 		<div class="foto">
 			<h3 class="foto__title">Моя фотография в шахте</h3>
-			<img src="img/foto.jpg" alt="На экскурсиях вдохновляюсь. Забываю фотографировать" class="info">
+			<img src="img/foto.jpg" alt="Это не ошибка загрузки.На экскурсиях вдохновляюсь. Забываю фотографировать" class="info">
 		</div>
 		<div class="site">
 			<h2 class="site__title"><a id="contacts"></a>Больше информации на официальном сайте</h2>
